--- a/partials/contact.hbs
+++ b/partials/contact.hbs
@@ -1,9 +1,9 @@
 <!-- Replace "your@email.com" with your personal email -->
-<form action="//formspree.io/your@email.com" method="POST" id="contactform">
+<form action="//formspree.io/zll307339489@live.com" method="POST" id="contactform">
 	
 	<!-- DO NOT EDIT BELOW THIS LINE -->
 	<input type="hidden" name="_subject" value="Contact Form Submission From {{@blog.title}}" />
-	
+
 	<label for="name">Full Name</label>
 	<input type="text" name="name"></input>
 
