--- a/partials/excerpt.hbs
+++ b/partials/excerpt.hbs
@@ -6,5 +6,10 @@
 	<div class="excerpt-content">
 		{{excerpt words="80"}}...
 	</div>
+	{{#if tags}}
+	<!-- <div class="tags"> -->
+		{{tags}}
+	<!-- </div> -->
+	{{/if}}
 	<a href="{{url}}"><div class="btn read-more">Continue Reading</div></a>
 </div>
