--- a/post.hbs
+++ b/post.hbs
@@ -1,6 +1,6 @@
 {{!< default}}
 {{#post}}
-<header class="regular post" 
+<header class="regular post"
 	{{#if image}}
 	style="background-image: url({{image}});"
 	{{else}}
@@ -31,19 +31,19 @@
 	<div class="post-footer">
 
 		<div class="share">
-			<a class="icon-twitter" href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
+			<a class="am-icon-btn am-icon-qq" href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
                 <i class="fa fa-twitter"></i>
             </a>
-            <a class="icon-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
+            <a class="am-icon-btn am-icon-weibo" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
                 <i class="fa fa-facebook"></i>
             </a>
-            <a class="icon-google-plus" href="https://plus.google.com/share?url={{url absolute="true"}}" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
+            <a class="am-icon-btn am-icon-github" href="https://plus.google.com/share?url={{url absolute="true"}}" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
                 <i class="fa fa-google-plus"></i>
             </a>
 		</div>
 
 
-		
+
 	</div>
 
 	{{#prev_post}}
