--- a/home.hbs
+++ b/home.hbs
@@ -1,6 +1,6 @@
 {{!< default}}
 
-<header id="homepage-hero" 
+<header id="homepage-hero"
 	{{#if @blog.cover}}
 	style="background-image: url({{@blog.cover}});"
 	{{else}}
@@ -11,11 +11,22 @@
 	<div class="title-container">
 		<h1 class="blog-title">{{@blog.title}}</h1>
 		<p class="blog-description">{{@blog.description}}</p>
-		
+
 		<ul class="homepage-links">
 			<li><a href="#home-latest-post" id="blog">Blog</a></li>
 			{{navigation}}
 		</ul>
+	</div>
+	<div class="share">
+		<a class="icon-twitter" href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
+							<i class="fa fa-qq" aria-hidden="true"></i>
+					</a>
+					<a class="icon-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
+							<i class="fa fa-weibo" aria-hidden="true"></i>
+					</a>
+					<a class="icon-google-plus" href="https://plus.google.com/share?url={{url absolute="true"}}" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
+							<i class="fa fa-google-plus"></i>
+					</a>
 	</div>
 
 </header>
