--- a/index.hbs
+++ b/index.hbs
@@ -1,6 +1,6 @@
 {{!< default}}
 
-<header class="regular blogrollpage" 
+<header class="regular blogrollpage"
 	{{#if @blog.cover}}
 	style="background-image: url({{@blog.cover}});"
 	{{else}}
@@ -8,7 +8,7 @@
 	{{/if}}
 >
 	{{> nav-container}}
-
+		{{social}}
 	<div class="title-container">
 		<h1 class="blogrollpage-title">Latest Blog Posts</h1>
 	</div>
