--- a/index.hbs
+++ b/index.hbs
@@ -8,7 +8,7 @@
 	{{/if}}
 >
 	{{> nav-container}}
-		{{social}}
+		{{> social}}
 	<div class="title-container">
 		<h1 class="blogrollpage-title">Latest Blog Posts</h1>
 	</div>
