--- a/home.hbs
+++ b/home.hbs
@@ -9,7 +9,7 @@
 >
 
 	<div class="title-container">
-		<h1 class="blog-title">{{@blog.title}}</h1>
+		<h1>{{@blog.title}}</h1>
 		<p class="blog-description">{{@blog.description}}</p>
 
 		<ul class="homepage-links">
@@ -17,7 +17,7 @@
 			{{navigation}}
 		</ul>
 	</div>
-	{{social}}
+	{{> social}}
 </header>
 
 <main id="home-latest-post">
