--- a/partials/excerpt.hbs
+++ b/partials/excerpt.hbs
@@ -8,7 +8,7 @@
 	</div>
 	{{#if tags}}
 	<div class="tags">
-		{{tags}}
+		{{> tags}}
 	</div>
 	{{/if}}
 	<a href="{{url}}"><div class="btn read-more">Read more</div></a>
