--- a/partials/nav-container.hbs
+++ b/partials/nav-container.hbs
@@ -8,7 +8,7 @@
 		{{/if}}
 		</a>
 	</div>
-	
+
 	{{#if @blog.navigation}}
 	<ul class="navigation">
 		{{navigation}}
@@ -21,7 +21,7 @@
 <div id="hidden-nav">
 <ul>
 	{{navigation}}
-	<li><a href="#" id="hide-nav">X</a></li>
+	<li><a href="#" id="hide-nav">Close</a></li>
 </ul>
 </div>
 {{/if}}
