--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,11 +113,11 @@ pre,code
   display:inline-block;
   transition:background-color 0.6s, color 0.6s;
 }
-/*.btn:hover,input[type="submit"]:hover,.homepage-links li a:hover,.btn:focus,input[type="submit"]:focus,.homepage-links li a:focus
+.btn:hover,input[type="submit"]:hover,.homepage-links li a:hover,.btn:focus,input[type="submit"]:focus,.homepage-links li a:focus
 {
   background-color:#eee;
   color:#505050;
-}*/
+}
 .pagination
 {
   margin-top:1rem;
@@ -464,12 +464,25 @@ body.post-template .post-excerpt .author
   border-radius:50%;
   text-align:center;
   padding:8px;
-  margin:5px 0 0 5px;
+  margin:2rem 0 0 2rem;
   transition:background-color 0.6s;
 }
-.post-footer .share .fa:hover
+/*.post-footer .share .fa:hover
 {
   background-color:#505050
+}*/
+.social-icon .share .fa
+{
+  width:50px;
+  height:50px;
+  background-color:#c8c8c8;
+  color:#fafafa;
+  border-radius:50%;
+  text-align:center;
+  padding:8px;
+  margin:2rem 0 0 2rem;
+  transition:background-color 0.6s;
+  float: left;
 }
 .more-post
 {
