--- a/author.hbs
+++ b/author.hbs
@@ -15,7 +15,7 @@
 	<div class="title-container">
 
 		<h1 class="blog-title">{{name}}</h1>
-		<p class="blog-description">Student.Enjoy life.Enjoy learning.Be a giant.</p>
+		<p class="blog-description">Student.Enjoy learning.To be a giant.</p>
 
 		<ul class="homepage-links">
 			<li><a href="{{@blog.url}}">Home</a></li>
