--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -1,13 +1,13 @@
 <div class="social-icon">
 
   <div class="share">
-    <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2::52" alt="contact me with QQ" title="contact me with QQ"/>
+    <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=&site=qq&menu=yes" alt="contact me with QQ" title="contact me with QQ">
                   <i class="fa fa-qq fa-2x" aria-hidden="true"></i>
     </a>
     <a  href="http://weibo.com/3612080914/profile?topnav=1&wvr=6&is_all=1" alt="contact me with weibo" title="contact me with weibo">
               <i class="fa fa-weibo fa-2x" aria-hidden="true"></i>
           </a>
-          <a class="icon-google-plus fa-2x" href="https://plus.google.com/share?url={{url absolute="true"}}" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
+    <a class="icon-google-plus fa-2x" href="https://plus.google.com/share?url={{url absolute="true"}}" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
               <i class="fa fa-weixin" aria-hidden="true"></i>
           </a>
   </div>
