--- a/error.hbs
+++ b/error.hbs
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>Oops!</title>
-	
+
 	<meta name="description" content="{{meta_description}}" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="{{asset "css/style.css"}}">
 
 	{{ghost_head}}
@@ -24,9 +24,9 @@
 	<div class="title-container">
 		<h1 class="blog-title">Uh Oh!</h1>
 		<p class="blog-description">There seems to be a problem, we can't find what you are looking for.</p>
-		
+
 		<ul class="homepage-links">
-			<li><a href="{{@blog.url}}">Go Back Home</a></li>
+			<li><a href="{{@blog.url}}">Back Home</a></li>
 		</ul>
 	</div>
 </header>
