--- a/partials/excerpt.hbs
+++ b/partials/excerpt.hbs
@@ -7,9 +7,9 @@
 		{{excerpt words="80"}}...
 	</div>
 	{{#if tags}}
-	<div class="tags">
-		{{> tags}}
-	</div>
+	<!-- <div class="tags"> -->
+		{{tags}}
+	<!-- </div> -->
 	{{/if}}
 	<a href="{{url}}"><div class="btn read-more">Read more</div></a>
 </div>
