--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -1,6 +1,6 @@
-<div class="social-icon">
+<div class="social-div" class="social-icon">
 
-  <div class="share">
+  <!-- <div class="share"> -->
     <a class="icon-twitter" href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
               <i class="fa fa-qq fa-2x" aria-hidden="true"></i>
           </a>
@@ -10,5 +10,5 @@
           <a class="icon-google-plus fa-2x" href="https://plus.google.com/share?url={{url absolute="true"}}" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
               <i class="fa fa-weixin" aria-hidden="true"></i>
           </a>
-  </div>
+  <!-- </div> -->
 </div>
