--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -1,4 +1,4 @@
-<div class="social-div" class="social-icon">
+<div id="social-div" class="social-icon">
 
   <!-- <div class="share"> -->
     <a class="icon-twitter" href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
