--- a/post.hbs
+++ b/post.hbs
@@ -17,10 +17,10 @@
 		<h1 class="post-title">{{title}}</h1>
 		<h3 class="post-meta">Posted on <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="D MMMM YYYY"}}</time> by {{author}}</h3>
 
-		{{#if tags}}
+		<!-- {{#if tags}}
 		<div class="tags">
 			{{tags}}
-		</div>
+		</div> -->
 		{{/if}}
 	</div>
 </header>
