--- a/page-contact.hbs
+++ b/page-contact.hbs
@@ -1,6 +1,6 @@
 {{!< default}}
 {{#post}}
-<header class="regular post" 
+<header class="regular post"
 	{{#if image}}
 	style="background-image: url({{image}});"
 	{{else}}
@@ -20,8 +20,8 @@
 
 <main>
 	<div class="post-content">{{content}}</div>
-	
-	{{> contact}}
+
+	{{contact}}
 
 </main>
 {{/post}}
