--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -1,13 +1,13 @@
 <div id="social-div" class="social-icon">
 
   <div id="social-div" class="share">
-    <a class="icon-twitter" href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
+    <a class="fa-2x" href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
               <i class="fa fa-qq fa-2x" aria-hidden="true"></i>
           </a>
-          <a  href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
+          <a class="fa-2x" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
               <i class="fa fa-weibo fa-2x" aria-hidden="true"></i>
           </a>
-          <a class="icon-google-plus fa-2x" href="https://plus.google.com/share?url={{url absolute="true"}}" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
+          <a class="fa-2x" href="https://plus.google.com/share?url={{url absolute="true"}}" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
               <i class="fa fa-weixin" aria-hidden="true"></i>
           </a>
   </div>
