--- a/partials/excerpt.hbs
+++ b/partials/excerpt.hbs
@@ -1,15 +1,15 @@
 <div class="post-excerpt">
 	<hgroup>
-		<h2 class="excerpt-title"><a href="{{url}}">{{{title}}}</a><span class="tags">{{tag}}</span></h2>
+		<h2 class="excerpt-title"><a href="{{url}}">{{{title}}}</a><span class="tags">{{tags}}</span></h2>
 		<h3 class="excerpt-meta">Posted on <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="D MMMM YYYY"}}</time> <span class="author">by {{author}}</span></h3>
 	</hgroup>
 	<div class="excerpt-content">
 		{{excerpt words="80"}}...
 	</div>
-	<!-- {{#if tags}} -->
-	<!-- <div class="tags"> -->
-		<!-- {{tags}} -->
-	<!-- </div> -->
-	<!-- {{/if}} -->
+	{{#if tags}}
+	<div class="tags">
+		{{tags}}
+	</div>
+	{{/if}}
 	<a href="{{url}}"><div class="btn read-more">Read more</div></a>
 </div>
