--- a/post.hbs
+++ b/post.hbs
@@ -18,7 +18,7 @@
 		<h3 class="post-meta">Posted on <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="D MMMM YYYY"}}</time> by {{author}}</h3>
 
 		{{#if tags}}
-		<!-- <div class="tags"> -->
+		<div class="tags">
 			{{tags}}
 		</div>
 		{{/if}}
