--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -1,7 +1,7 @@
 <div id="social-div" class="social-icon">
 
   <div id="social-div" class="share">
-    <a class="fa-2x" href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
+    <a class="fa-2x" target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=307339489&site=qq&menu=yes" alt="contact me with QQ" title="contact me with QQ">
               <i class="fa fa-qq" aria-hidden="true"></i>
           </a>
           <a class="fa-2x" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
