--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -4,11 +4,15 @@
     <a class="fa-2x" target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=307339489&site=qq&menu=yes" alt="contact me with QQ" title="contact me with QQ">
               <i class="fa fa-qq" aria-hidden="true"></i>
           </a>
-          <a class="fa-2x" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
-              <i class="fa fa-weibo" aria-hidden="true"></i>
-          </a>
-          <a class="fa-2x" href="https://plus.google.com/share?url={{url absolute="true"}}" onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
+          <a class="fa-2x" href="#" onclick="window.open('width=490,height=530',url('{{asset "images/weixin.JPG"}}'));return false;">
               <i class="fa fa-weixin" aria-hidden="true"></i>
           </a>
+          <a class="fa-2x" target="_blank" href="http://weibo.com/3612080914/profile?topnav=1&wvr=6&is_all=1" alt="contact me with Weibo" title="contact me with Weibo">
+              <i class="fa fa-weibo" aria-hidden="true"></i>
+          </a>
+          <a class="fa-2x" target="_blank" href="https://github.com/xinlvying" alt="my Github" title="my Github">
+          <i class="fa fa-github" aria-hidden="true"></i>
+        </a>
   </div>
 </div>
+<!-- <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=307339489&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:307339489:52" alt="contact me with QQ" title="contact me with QQ"/></a> -->
