--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -4,7 +4,7 @@
     <a class="fa-2x" target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=307339489&site=qq&menu=yes" alt="contact me with QQ" title="contact me with QQ">
               <i class="fa fa-qq" aria-hidden="true"></i>
           </a>
-          <a class="fa-2x" href="#" ><img rel="/asset/images/weixin.JPG" alt="my Weichat" title="my Weichat"/>
+          <a class="fa-2x" href="#" >
               <i class="fa fa-weixin" aria-hidden="true"></i>
           </a>
           <a class="fa-2x" target="_blank" href="http://weibo.com/3612080914/profile?topnav=1&wvr=6&is_all=1" alt="contact me with Weibo" title="contact me with Weibo">
