--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -1,7 +1,7 @@
-<div id="social-div" class="social-icon">
+<!-- <div id="social-div" class="social-icon"> -->
 
-  <div id="social-div" class="share">
-    <a class="fa-2x" target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=307339489&site=qq&menu=yes" alt="contact me with QQ" title="contact me with QQ">
+  <div class="share">
+    <a class="homepage-links" target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=307339489&site=qq&menu=yes" alt="contact me with QQ" title="contact me with QQ">
               <i class="fa fa-qq" aria-hidden="true"></i>
           </a>
           <a class="fa-2x" href="#" >
@@ -14,5 +14,5 @@
           <i class="fa fa-github" aria-hidden="true"></i>
         </a>
   </div>
-</div>
+<!-- </div> -->
 <!-- <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=307339489&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:307339489:52" alt="contact me with QQ" title="contact me with QQ"/></a> -->
