--- a/post.hbs
+++ b/post.hbs
@@ -46,9 +46,16 @@
 
 
 	</div>
-
+	<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
+<!-- UY END -->
+	<div>{{> commit}}</div>
+	{{pagination}}
+	
 	{{#prev_post}}
 	<div class="more-post">
+		<h4>More posts</h4>
 		    {{> excerpt}}
 	</div>
 	{{else}}
