--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -1,7 +1,7 @@
-<!-- <div id="social-div" class="social-icon"> -->
+<div class="social-icon">
 
-  <div class="social-icon share">
-    <a class="homepage-links fa-2x" target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=307339489&site=qq&menu=yes" alt="contact me with QQ" title="contact me with QQ">
+  <div class="share">
+    <a class="fa-2x" target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=307339489&site=qq&menu=yes" alt="contact me with QQ" title="contact me with QQ">
               <i class="fa fa-qq" aria-hidden="true"></i>
           </a>
           <a class="fa-2x" href="#" >
