--- a/post.hbs
+++ b/post.hbs
@@ -50,9 +50,9 @@
 <div id="uyan_frame"></div>
 <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
 <!-- UY END -->
-	<div>{{> commit}}</div>
+	{{commit}}
 	{{pagination}}
-	
+
 	{{#prev_post}}
 	<div class="more-post">
 		<h4>More posts</h4>
