--- a/post.hbs
+++ b/post.hbs
@@ -50,7 +50,7 @@
 <div id="uyan_frame"></div>
 <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
 <!-- UY END -->
-	{{commit}}
+	{{> commit}}
 
 	{{#prev_post}}
 	<div class="more-post">
