--- a/partials/social.hbs
+++ b/partials/social.hbs
@@ -7,7 +7,7 @@
           <a class="fa-2x" href="#" >
               <i class="fa fa-weixin" aria-hidden="true"></i>
           </a>
-          <a class="fa-2x" target="_blank" href="http://weibo.com/3612080914/profile?topnav=1&wvr=6&is_all=1" alt="contact me with Weibo" title="contact me with Weibo">
+          <a class="fa-2x" target="_blank" href="http://weibo.com/3612080914/" alt="contact me with Weibo" title="contact me with Weibo">
               <i class="fa fa-weibo" aria-hidden="true"></i>
           </a>
           <a class="fa-2x" target="_blank" href="https://github.com/xinlvying" alt="my Github" title="my Github">
