--- a/post.hbs
+++ b/post.hbs
@@ -46,14 +46,14 @@
 
 
 	</div>
-
+<!--
 	{{#prev_post}}
 	<div class="more-post">
 		    {{> excerpt}}
 	</div>
 	{{else}}
-	{{/prev_post}}
+	{{/prev_post}} -->
 
-
+	{{pagination}}
 </main>
 {{/post}}
