--- a/post.hbs
+++ b/post.hbs
@@ -46,13 +46,13 @@
 
 
 	</div>
-<!--
+
 	{{#prev_post}}
 	<div class="more-post">
 		    {{> excerpt}}
 	</div>
 	{{else}}
-	{{/prev_post}} -->
+	{{/prev_post}}
 
 
 </main>
