--- a/partials/excerpt.hbs
+++ b/partials/excerpt.hbs
@@ -4,12 +4,12 @@
 		<h3 class="excerpt-meta">Posted on <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="D MMMM YYYY"}}</time> <span class="author">by {{author}}</span></h3>
 		{{#if tags}}
 		<div class="excerpt_tags">
-			{{tags}}
+			<i class="fa fa-tags" aria-hidden="true">{{tags}}</i>
 		</div>
 		{{/if}}
 	</hgroup>
 	<div class="excerpt-content">
-		{{excerpt words="80"}}...
+		{{excerpt words="40"}}...
 	</div>
 	<a href="{{url}}"><div class="btn read-more">Read more</div></a>
 </div>
