--- a/post.hbs
+++ b/post.hbs
@@ -15,7 +15,8 @@
 
 	<div class="title-container">
 		<h1 class="post-title">{{title}}</h1>
-		<h3 class="post-meta">Posted on <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="D MMMM YYYY"}}</time> by {{author}}</h3>
+		<h3 class="post-meta">Posted on <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="D MMMM YYYY"}}</time></h3>
+		<h3 by {{author}}</h3>
 
 		{{#if tags}}
 		<div class="tags">
