--- a/post.hbs
+++ b/post.hbs
@@ -14,7 +14,7 @@
 	{{> nav-container}}
 
 	<div class="title-container">
-		<h1 id="back-to-top" class="post-title">{{title}}</h1>
+		<h1 class="post-title">{{title}}</h1>
 		<h3 class="post-meta">Posted on <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="D MMMM YYYY"}}</time></h3>
 		<h3 class="post-meta">by {{author}}</h3>
 
@@ -30,7 +30,7 @@
 <main>
 	<div class="post-content">{{content}}</div>
 	<div class="back-to-top">
-		<a class="class="fa-2x" "href="#back-to-top">
+		<a class="fa-2x" "href="#">
 	<i class="fa fa-angle-double-up" aria-hidden="true"></i>
 </a>
 </div>
