--- a/post.hbs
+++ b/post.hbs
@@ -30,7 +30,7 @@
 <main>
 	<div class="post-content">{{content}}</div>
 	<div class="back-to-top">
-		<a class="fa-2x" "href="#">
+		<a class="fa-2x" href="#">
 	<i class="fa fa-angle-double-up" aria-hidden="true"></i>
 </a>
 </div>
