--- a/post.hbs
+++ b/post.hbs
@@ -52,12 +52,21 @@
 
 	</div>
 
-	{{#prev_post}}
+	<div>
+	      {{#prev_post}}
+	        <a rel="prev" href="{{url}}">← {{title}}</a>
+	      {{/prev_post}}
+
+	      {{#next_post}}
+	        <a rel="next" href="{{url}}">{{title}} →</a>
+	      {{/next_post}}
+	</div>
+	<!-- {{#prev_post}}
 	<div class="more-post">
 		    {{> excerpt}}
 	</div>
 	{{else}}
-	{{/prev_post}}
+	{{/prev_post}} -->
 
 
 </main>
