--- a/post.hbs
+++ b/post.hbs
@@ -61,6 +61,7 @@
 	        <a rel="next" href="{{url}}">{{title}} →</a>
 	      {{/next_post}}
 	</div>
+	{{> comment}}
 	<!-- {{#prev_post}}
 	<div class="more-post">
 		    {{> excerpt}}
