--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,4 +9,4 @@ i:hover,i:focus{background-color: #eee;}
 .excerpt_tags i a:hover,.excerpt_tags i a:focus{color:#505050;}
 .back-to-top .fa{width: 30px;height: 30px;border-radius:50%;text-align:center;transition:background-color 0.6s;display: inline-block;float: right;}
 .next_post a i{display: block;float: left;}
-.prev_post a i{display: block;float: right;}
+.post_links .prev_post a i{display: block;float: right;}
