--- a/post.hbs
+++ b/post.hbs
@@ -53,16 +53,16 @@
 	</div>
 
 	<div class="post_links">
-		
+
 		<div class="next_post">
 		{{#next_post}}
-			<a rel="next" href="{{url}}"><i class="fa fa-backward" aria-hidden="true"></i> {{title}}</a>
+			<a class="next_post" rel="next" href="{{url}}"><i class="fa fa-backward" aria-hidden="true"></i> {{title}}</a>
 		{{/next_post}}
 	</div>
 
 	<div class="prev_post">
 	  {{#prev_post}}
-			<a rel="prev" href="{{url}}">{{title}} <i class="fa fa-forward" aria-hidden="true"></i></a>
+			<a class="prev_post" rel="prev" href="{{url}}">{{title}} <i class="fa fa-forward" aria-hidden="true"></i></a>
 		{{/prev_post}}
 	</div>
 
