--- a/post.hbs
+++ b/post.hbs
@@ -53,7 +53,7 @@
 	</div>
 
 	<div>
-
+		<h3>More posts</h3>
 		{{#next_post}}
 			<a class="next_post" rel="next" href="{{url}}"><i class="fa fa-backward" aria-hidden="true"></i> {{title}}</a>
 		{{/next_post}}
