--- a/post.hbs
+++ b/post.hbs
@@ -29,7 +29,7 @@
 
 <main>
 	<div class="post-content">{{content}}</div>
-	{{> back-to-top}}
+	{{> backtotop}}
 	<div class="post-footer">
 
 		<div class="share">
