--- a/partials/excerpt.hbs
+++ b/partials/excerpt.hbs
@@ -3,7 +3,7 @@
 		<h2 class="excerpt-title"><a href="{{url}}">{{{title}}}</a></h2>
 		<h3 class="excerpt-meta">Posted on <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="D MMMM YYYY"}}</time> <span class="author">by {{author}}</span></h3>
 		{{#if tags}}
-		<div class="post_tags">
+		<div class="excerpt_tags">
 			<i class="fa fa-tags" aria-hidden="true"> {{tags}}</i>
 		</div>
 		{{/if}}
