--- a/default.hbs
+++ b/default.hbs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width" />
 	<title>{{meta_title}}</title>
 
     <meta name="description" content="{{meta_description}}" />
