--- a/default.hbs
+++ b/default.hbs
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
+	<!-- <meta name="viewport" content="width=device-width" /> -->
 	<title>{{meta_title}}</title>
 
     <meta name="description" content="{{meta_description}}" />
