--- a/author.hbs
+++ b/author.hbs
@@ -14,8 +14,8 @@
 >
 	<div class="title-container">
 
-		<h1 class="blog-title">{{name}}</h1>
-		<p class="blog-description">Student.Enjoy learning.To be a giant.</p>
+		<h1 class="author-title">{{name}}</h1>
+		<p class="author-description">Student.Enjoy learning.To be a giant.</p>
 
 		<ul class="homepage-links">
 			<li><a href="{{@blog.url}}">Home</a></li>
