--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,20 +14,73 @@ a.prev_post,i.prev_post{float: right;color: #9e9e9e;transition: color 1s;}
 a.next_post:hover,i.next_post:hover,a.next_post:focus,i.next_post:focus{color: #8BC34A;}
 a.prev_post:hover,i.prev_post:hover,a.next_post:focus,i.next_post:focus{color: #8BC34A;}
 h2.post_links{font-family: monospace;color: #9c9c9c;}
+
+/** iPhone **/
+@media only screen and (min-width: 320px) and (max-width: 424px) {
+  h1.blog-title {font-size: 5.9rem;}
+  p.blog-description {font-size: 1.8rem;margin-bottom: 1.8rem;}
+
+  h1.author-title{font-size: 1.8rem;}
+  p.author-description{font-size: 1.5rem;margin-bottom: 1.5rem;}
+
+  h1.post-title{font-size: 2.1rem;}
+  h3.post-meta{color: #fafafa;font-family: inherit;font-size: 1.8rem;}
+  .post_tags i {font-size: 1.8rem;margin: 1rem 0 0 0;}
+
+  h1.blogrollpage-title{font-size: 3.8rem;}
+
+  /*#homepage-hero .btn, #homepage-hero input[type="submit"], #homepage-hero .homepage-links li a, .homepage-links li #homepage-hero a
+  {margin: 2rem 0 2rem 0;}*/
+}
+
+@media only screen and (min-width: 425px) and (max-width: 767px) {
+  h1.blog-title {font-size: 7.9rem;}
+  p.blog-description {font-size: 2.5rem;margin-bottom: 2.5rem;}
+
+  h1.author-title{font-size: 5.9rem;}
+  p.author-description{font-size: 2rem;margin-bottom: 2rem;}
+
+  h1.post-title{font-size: 2.8rem;}
+  h3.post-meta{color: #fafafa;font-family: inherit;font-size: 2rem;}
+  .post_tags i {font-size: 2rem;margin: 1rem 0 0 0;}
+
+  h1.blogrollpage-title{font-size: 5rem;}
+
+}
+
 /** iPad **/
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
   h1.blog-title {font-size: 12rem;}
-  h1.author-title{font-size: 6rem;}
-  h1.post-title{font-size: 4.5rem;}
-  h1.blogrollpage-title{font-size: 5rem;}
-  h3.post-meta{color: #fafafa;font-family: inherit;font-size: 2.5rem;}
   p.blog-description {font-size: 2.5rem;margin-bottom: 2.5rem;}
-  p.blog-description{font-size: 1.8rem;margin-bottom: 2.5rem;}
+
+  h1.author-title{font-size: 6rem;}
+  p.author-description{font-size: 1.8rem;margin-bottom: 2.5rem;}
+
+  h1.post-title{font-size: 4.5rem;}
+  h3.post-meta{color: #fafafa;font-family: inherit;font-size: 2.5rem;}
   .post_tags i {font-size: 2rem;margin: 1rem 0 0 0;}
-  .regular nav{font-size: 1.5rem;}
+
+  h1.blogrollpage-title{font-size: 7rem;}
+
+  .regular nav{font-size: 1.2rem;}
+
   #homepage-hero .btn, #homepage-hero input[type="submit"], #homepage-hero .homepage-links li a, .homepage-links li #homepage-hero a
   {margin: 2rem 0 2rem 0;}
 
 }
-/** iPhone **/
-@media only screen and (min-width: 320px) and (max-width: 767px) {}
+
+@media only screen and (min-width: 1025px){
+  h1.blog-title {font-size: 15rem;}
+  p.blog-description {font-size: 3rem;margin-bottom: 3rem;}
+
+  h1.author-title{font-size: 9rem;}
+  p.author-description{font-size: 2.5rem;margin-bottom: 2.5rem;}
+
+  h1.post-title{font-size: 6rem;}
+  h3.post-meta{color: #fafafa;font-family: inherit;font-size: 2.5rem;}
+  .post_tags i {font-size: 2rem;margin: 1rem 0 0 0;}
+
+  h1.blogrollpage-title{font-size: 10rem;}
+
+  .regular nav{font-size: 1.5rem;}
+}
