添加多说评论

--- a/author.hbs
+++ b/author.hbs
@@ -18,10 +18,10 @@
 		<p class="author-description">Student.Enjoy learning.To be a giant.</p>
 
 		<ul class="homepage-links">
-			<li><a href="{{@blog.url}}">Home</a></li>
-			<li><a href="#home-latest-post" id="blog">My Posts</a></li>
-
-			<li><a href="#">More</a></li>
+			<li><a href="{{@blog.url}}">主页</a></li>
+			<li><a href="#home-latest-post" id="blog">博文</a></li>
+ore
+			<li><a href="#">更多</a></li>
 			{{#if website}}
 			<li><a href="{{website}}" target="_blank">Blog on Github</a></li>
 			{{/if}}
