--- a/home.hbs
+++ b/home.hbs
@@ -13,7 +13,7 @@
 		<p class="blog-description">{{@blog.description}}</p>
 
 		<ul class="homepage-links">
-			<li><a href="#home-latest-post" id="blog">Blog</a></li>
+			<li><a href="#home-latest-post" id="blog">博文</a></li>
 			{{navigation}}
 		</ul>
 			{{>social}}
