--- a/default.hbs
+++ b/default.hbs
@@ -25,7 +25,7 @@
 
 	{{ghost_foot}}
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
     <script src="{{asset "js/script.js"}}"></script>
 </body>
 </html>
