增加标签栏

--- a/author.hbs
+++ b/author.hbs
@@ -15,15 +15,14 @@
 	<div class="title-container">
 
 		<h1 class="author-title">{{name}}</h1>
-		<p class="author-description">Student.Enjoy learning.To be a giant.</p>
+		<p class="author-description">学生一枚|自学党|web？|心宽体胖</p>
 
 		<ul class="homepage-links">
 			<li><a href="{{@blog.url}}">主页</a></li>
 			<li><a href="#home-latest-post" id="blog">博文</a></li>
-ore
 			<li><a href="#">更多</a></li>
 			{{#if website}}
-			<li><a href="{{website}}" target="_blank">Blog on Github</a></li>
+			<li><a href="{{website}}" target="_blank">Github博客</a></li>
 			{{/if}}
 
 
