--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,15 +5,22 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 .excerpt_tags a{color:#9E9E9E;font-family: monospace;transition: color 1s;}
 .excerpt_tags i{color: #9e9e9e;transition: color 1s;}
 .excerpt_tags i:hover,.excerpt_tags a:hover,.excerpt_tags i:focus,excerpt_tags a:focus{color:#8BC34A;}
+
+.tags_column a{color:#9E9E9E;font-family: monospace;transition: color 1s;}
+.tags_column i{color: #9e9e9e;transition: color 1s;}
+.tags_column i:hover,.excerpt_tags a:hover,.excerpt_tags i:focus,excerpt_tags a:focus{color:#8BC34A;}
+
 .post_tags a{color:#fafafa;font-family: monospace;transition: color 1s;}
-.post_tags i{color: #fafafa;transition: color 1s;}
+.post_tags i{color: #fafafa;transition: color 1s;margin: 2rem;}
 .post_tags i:hover,.post_tags a:hover,.post_tags i:focus,post_tags a:focus{color:#8BC34A;}
+
 .back-to-top .fa{width: 30px;height: 30px;border-radius:50%;text-align:center;transition:background-color 0.6s;display: inline-block;float: right;position: relative;}
-a.next_post,i.next_post{float: left;color: #9e9e9e;transition: color 1s;}
-a.prev_post,i.prev_post{float: right;color: #9e9e9e;transition: color 1s;}
+
+a.next_post,i.next_post{color: #9e9e9e;transition: color 1s;display: block;;}
+a.prev_post,i.prev_post{color: #9e9e9e;transition: color 1s;display: block;;}
 a.next_post:hover,i.next_post:hover,a.next_post:focus,i.next_post:focus{color: #8BC34A;}
 a.prev_post:hover,i.prev_post:hover,a.next_post:focus,i.next_post:focus{color: #8BC34A;}
-h2.post_links{font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;;color: #9c9c9c;text-align: center;float: left;}
+h2.post_links,h2.tags_column{font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;;color: #9c9c9c;}
 
 /** iPhone **/
 @media only screen and (min-width: 320px) and (max-width: 424px) {
