--- a/post.hbs
+++ b/post.hbs
@@ -47,9 +47,9 @@
 
 
 	</div> -->
-
-	<div class="post_links">
-		<h2>More posts</h2>
+	<hr />
+	<div>
+		<h2 class="post_links">More posts</h2>
 		{{#next_post}}
 			<a class="next_post" rel="next" href="{{url}}"><i class="fa fa-backward" aria-hidden="true"></i> {{title}}</a>
 		{{/next_post}}
@@ -61,7 +61,7 @@
 </div>
 
 	{{> tags_column}}
-	
+
 	{{> comment}}
 
 </main>
