增加标签栏

--- a/partials/backtotop.hbs
+++ b/partials/backtotop.hbs
@@ -1,5 +1,1 @@
-<div class="back-to-top">
-  <a class="fa-2x" href="#">
-    <i class="fa fa-angle-double-up" aria-hidden="true"></i>
-  </a>
-</div>
+<div id="gotop"></div>
