增加标签栏

--- a/post.hbs
+++ b/post.hbs
@@ -29,7 +29,7 @@
 
 <main>
 	<div class="post-content">{{content}}</div>
-	{{> backtotop}}
+	{{> gotop}}
 	<!-- <div class="post-footer">
 
 		<div class="share">
