--- a/partials/tags_column.hbs
+++ b/partials/tags_column.hbs
@@ -1,7 +1,11 @@
 <div class="tags_column">
   <h2 class="tags_column">标签</h2>
-  {{#foreach tags}}
   <i class="fa fa-tags" aria-hidden="true">
-  <li><a href="{{url absolute="true"}}">{{tags}}</a></li>
+  {{#foreach posts}}
+  <ul>
+    {{#tags}}
+        <li>{{name}}</li>
+    {{/tags}}
+  </ul>
   {{/foreach}}
 </div>
