--- a/partials/tags_column.hbs
+++ b/partials/tags_column.hbs
@@ -1,11 +1,10 @@
 <div class="tags_column">
   <h2 class="tags_column">标签</h2>
-  <i class="fa fa-tags" aria-hidden="true">
   {{#foreach posts}}
   <ul>
-    {{#tags}}
+    {{#if tags}}
         <li>{{name}}</li>
-    {{/tags}}
+    {{/if}}
   </ul>
   {{/foreach}}
 </div>
