增加标签栏

--- a/partials/tags_column.hbs
+++ b/partials/tags_column.hbs
@@ -1,9 +1,9 @@
 <div class="tags_column">
   <h2 class="tags_column">标签</h2>
-  {{tag_cloud limit="all"}}
-  <!-- <ul class="tag-cloud">  
+  <!-- {{tag_cloud limit="all"}} -->
+  <ul class="tag-cloud">
     {{#foreach tags}}
-    <a href="{{url}}" class="tag-item">{{name}}<span class="post-count">{{post_count}}</span></a>
+    <a href="{{url}}" class="tags_column">{{name}}<span class="post-count">{{post_count}}</span></a>
     {{/foreach}}
-</ul>  -->
+</ul>
 </div>
