--- a/partials/tags_column.hbs
+++ b/partials/tags_column.hbs
@@ -1,7 +1,7 @@
 <div class="tags_column">
   <h2 class="tags_column">标签</h2>
   <!-- {{tag_cloud limit="all"}} -->
-  <ul class="tag-cloud">
+  <ul class="tags_column">
     {{#foreach tags}}
     <a href="{{url}}" class="tags_column">{{name}}<span class="post-count">{{post_count}}</span></a>
     {{/foreach}}
