增加标签栏

--- a/partials/excerpt.hbs
+++ b/partials/excerpt.hbs
@@ -4,7 +4,7 @@
 		<h3 class="excerpt-meta">Posted on <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="D MMMM YYYY"}}</time> <span class="author">by {{author}}</span></h3>
 		{{#if tags}}
 		<div class="excerpt_tags">
-			<i class="fa fa-tags" aria-hidden="true"> {{tags}}</i>
+			<i class="fa fa-tags excerpt_tags" aria-hidden="true"> {{tags}}</i>
 		</div>
 		{{/if}}
 	</hgroup>
