--- a/partials/tags_column.hbs
+++ b/partials/tags_column.hbs
@@ -1,9 +1,9 @@
 <div class="tags_column">
   <h2 class="tags_column">标签</h2>
-  <!-- {{tag_cloud limit="all"}} -->
-  <ul class="tags_column">
+  <i class="fa fa-tags" aria-hidden="true"> {{tag_cloud limit="all"}}</i>
+  <!-- <ul class="tags_column">
     {{#foreach tags}}
     <a href="{{url}}" class="tags_column">{{name}}<span class="post-count">{{post_count}}</span></a>
     {{/foreach}}
-</ul>
+</ul> -->
 </div>
