--- a/post.hbs
+++ b/post.hbs
@@ -49,6 +49,7 @@
 	</div> -->
 
 	<div class="post_links">
+		<h2 class="tags_column">更多文章</h2>
 		{{#next_post}}
 			<a class="next_post" rel="next" href="{{url}}"><i class="fa fa-backward" aria-hidden="true"></i> {{title}}</a>
 		{{/next_post}}
