--- a/partials/tags_column.hbs
+++ b/partials/tags_column.hbs
@@ -1,10 +1,12 @@
 <div class="tags_column">
   <h2 class="tags_column">全部标签</h2>
   <!-- {{tag_cloud limit="all"}} -->
-  <i class="fa fa-tags tags_column" aria-hidden="true"></i>
   <ul class="tags_column">
-    {{#foreach tags}}
+    {{#foreach posts}}
+    {{#if tags}}
+    <i class="fa fa-tags tags_column" aria-hidden="true"></i>
     <a href="{{url}}" class="tags_column">{{name}}<span class="post-count">{{post_count}}</span></a>
+    {{/if}}
     {{/foreach}}
 </ul>
 </div>
