--- a/partials/tags_column.hbs
+++ b/partials/tags_column.hbs
@@ -4,7 +4,7 @@
   <ul class="tags_column">
     {{#foreach tags}}
     <i class="fa fa-tags tags_column" aria-hidden="true"></i>
-    <a href="{{url}}" class="tags_column">{{name}}<span class="post-count">{{post_count}}</span></a>
+    <a href="{{url}}" class="tags_column">{{name}}</a>
     {{/foreach}}
 </ul>
 </div>
