--- a/home.hbs
+++ b/home.hbs
@@ -26,7 +26,7 @@
 		{{> excerpt}}
 	{{/foreach}}
 
-	{{> gotop}}
+	<div id="gotop" style="background: url('{{asset "images/cover.jpg"}}') no-repeat;"></div>
 
 	{{pagination}}
 </main>
