--- a/partials/tags_column.hbs
+++ b/partials/tags_column.hbs
@@ -1,10 +1,10 @@
 <div class="tags_column">
   <h2 class="tags_column">全部标签</h2>
-  <!-- {{tag_cloud limit="all"}} -->
   <ul class="tags_column">
-    {{#foreach tags}}
+    <!-- {{#foreach tags}} -->
     <i class="fa fa-tags tags_column" aria-hidden="true"></i>
-    <a href="{{url}}" class="tags_column">{{name}}</a>
-    {{/foreach}}
+    {{tag_cloud limit="all"}}
+    <!-- <a href="{{url}}" class="tags_column">{{name}}</a> -->
+    <!-- {{/foreach}} -->
 </ul>
 </div>
