--- a/post.hbs
+++ b/post.hbs
@@ -62,6 +62,6 @@
 	{{> tags_column}}
 
 	{{> comment}}
-	<div id="gotop" style="background: url('{{asset "images/cover.jpg"}}') no-repeat;"></div>
+	<div id="gotop" style="background: url('{{asset "images/gotop.jpg"}}') no-repeat;"></div>
 </main>
 {{/post}}
