--- a/author.hbs
+++ b/author.hbs
@@ -37,6 +37,6 @@
 	{{#foreach posts}}
 		{{> excerpt}}
 	{{/foreach}}
-	<div id="gotop" style="background: url('{{asset "images/cover.jpg"}}') no-repeat;"></div>
+	<div id="gotop" style="background: url('{{asset "images/gotop.jpg"}}') no-repeat;"></div>
 	{{pagination}}
 </main>
