--- a/index.hbs
+++ b/index.hbs
@@ -17,6 +17,6 @@
 	{{#foreach posts}}
 		{{> excerpt}}
 	{{/foreach}}
-	<div id="gotop" style="background: url('{{asset "images/cover.jpg"}}') no-repeat;"></div>
+	<div id="gotop" style="background: url('{{asset "images/gotop.jpg"}}') no-repeat;"></div>
 	{{pagination}}
 </main>
