--- a/author.hbs
+++ b/author.hbs
@@ -38,5 +38,6 @@
 		{{> excerpt}}
 	{{/foreach}}
 	<div id="gotop" style="background: url('{{asset "images/gotop.jpg"}}') no-repeat;"></div>
+	{{tag_cloud limit="all"}}
 	{{pagination}}
 </main>
