--- a/home.hbs
+++ b/home.hbs
@@ -27,6 +27,6 @@
 	{{/foreach}}
 
 	<div id="gotop" style="background: url('{{asset "images/gotop.jpg"}}') no-repeat;"></div>
-
+	{{tag_cloud limit="all"}}
 	{{pagination}}
 </main>
