--- a/post.hbs
+++ b/post.hbs
@@ -59,7 +59,7 @@
 
 </div>
 
-	{{> tags_column}}
+	{{tag_cloud limit="all"}}
 
 	{{> comment}}
 	<div id="gotop" style="background: url('{{asset "images/gotop.jpg"}}') no-repeat;"></div>
