--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,8 @@ i.excerpt_tags:hover,a.excerpt_tags:hover,i.excerpt_tags:focus,a.excerpt_tags:fo
 .tags_column a{color:#777;background-color: #eee;font-family: monospace;transition: background-color 1s;margin: 0.5rem;padding: 2px 6px;line-height: 2.5rem;}
 .tags_column i{color: #9e9e9e;transition: color 1s;}
 h2.tags_column{font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;;color: #9c9c9c;}
-i.tags_column:hover,i.tags_column:focus{color: #8BC34A;}
-a.tags_column:hover,a.tags_column:focus{background-color: #8BC34A;}
+.tags_column i:hover,.tags_column i:focus{color: #8BC34A;}
+.tags_column a:hover,.tags_column a:focus{background-color: #8BC34A;}
 
 .post_tags a{color:#fafafa;font-family: monospace;transition: color 1s;}
 .post_tags i{color: #fafafa;transition: color 1s;margin: 2rem;}
