--- a/author.hbs
+++ b/author.hbs
@@ -37,7 +37,7 @@
 	{{#foreach posts}}
 		{{> excerpt}}
 	{{/foreach}}
-	<div id="gotop" style="background: url('{{asset "images/gotop.jpg"}}') no-repeat;"></div>
+	<div id="gotop" style="display:block"></div>
 	{{tag_cloud limit="all"}}
 	{{pagination}}
 </main>
