--- a/post.hbs
+++ b/post.hbs
@@ -62,6 +62,6 @@
 	{{tag_cloud limit="all"}}
 
 	{{> comment}}
-	<div id="gotop" style="background-image: url('{{asset "images/gotop.jpg"}}') no-repeat;"></div>
+	<div id="gotop" style="display:block"></div>
 </main>
 {{/post}}
