--- a/home.hbs
+++ b/home.hbs
@@ -26,7 +26,7 @@
 		{{> excerpt}}
 	{{/foreach}}
 
-	<div id="gotop" style="background: url('{{asset "images/gotop.jpg"}}') no-repeat;"></div>
+	<div id="gotop" style="display:block"></div>
 	{{tag_cloud limit="all"}}
 	{{pagination}}
 </main>
