--- a/partials/tag_cloud.hbs
+++ b/partials/tag_cloud.hbs
@@ -1,6 +1,8 @@
+<div class="tags_column">
 <ul class="tags_column">
   <h2 class="tags_column">云标签</h2>
     {{#foreach tags}}
     <a href="{{url}}" class="tags_column"><i class="fa fa-tags excerpt_tags" aria-hidden="true">{{name}}</i><span class="post-count">{{post_count}}</span></a>
     {{/foreach}}
 </ul>
+</div>
