--- a/partials/nav-container.hbs
+++ b/partials/nav-container.hbs
@@ -21,7 +21,7 @@
 <div id="hidden-nav">
 <ul>
 	{{navigation}}
-	<li><a href="#" id="hide-nav">Close</a></li>
+	<li><a href="#" id="hide-nav">关闭</a></li>
 </ul>
 </div>
 {{/if}}
