--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,12 +13,12 @@ h2.tags_column{font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans 
 .tags_column i:hover,.tags_column a:hover,.tags_column i:focus,.tags_column a:focus{background-color: #fafafa;color: #8BC34A;}
 
 
-.post_tags a{color:#fafafa;font-family: monospace;transition: color 1s;}
-.post_tags i{color: #fafafa;transition: color 1s;margin: 2rem;}
+.post_tags a{color:#505050;font-family: "Lucida Grande", Lucida Sans Unicode, Hiragino Sans GB, WenQuanYi Micro Hei, Verdana, Aril, sans-serif;transition: color 1s;transition: background-color 1s;border: 1px solid #eee;border-radius: 30%;}
+.post_tags i{color: #505050;font-family: monospace;transition: color 1s;transition: background-color 1s;margin: 2rem;}
 .post_tags i:hover,.post_tags a:hover,.post_tags i:focus,post_tags a:focus{color:#8BC34A;}
 
 /*.back-to-top .fa{width: 30px;height: 30px;border-radius:50%;text-align:center;transition:background-color 0.6s;display: inline-block;float: right;position: relative;}*/
-#gotop {width: 48px;height: 48px;position: fixed;bottom: 40px;right: 10px;top: auto;display: block;cursor: pointer;background: background: url(../images/gotop.png) no-repeat;}
+#gotop {width: 48px;height: 48px;position: fixed;bottom: 40px;right: 10px;top: auto;display: block;cursor: pointer;background: url('../images/gotop.png') no-repeat;}
 
 a.next_post,i.next_post{color: #9e9e9e;transition: color 1s;display: block;;}
 a.prev_post,i.prev_post{color: #9e9e9e;transition: color 1s;display: block;;}
