--- a/index.hbs
+++ b/index.hbs
@@ -17,7 +17,7 @@
 	{{#foreach posts}}
 		{{> excerpt}}
 	{{/foreach}}
-	<div id="gotop" style="display:block"></div>
+	{{> gotop}}
 	{{tag_cloud limit="all"}}
 	{{pagination}}
 </main>
