--- a/author.hbs
+++ b/author.hbs
@@ -37,7 +37,7 @@
 	{{#foreach posts}}
 		{{> excerpt}}
 	{{/foreach}}
-	<div id="gotop" style="display:block"></div>
+	{{> gotop}}
 	{{tag_cloud limit="all"}}
 	{{pagination}}
 </main>
