--- a/home.hbs
+++ b/home.hbs
@@ -25,8 +25,7 @@
 	{{#foreach posts}}
 		{{> excerpt}}
 	{{/foreach}}
-
-	<div id="gotop" style="display:block"></div>
+	{{> gotop}}
 	{{tag_cloud limit="all"}}
 	{{pagination}}
 </main>
